Poprawione nazwy klas

--- a/css/main.css
+++ b/css/main.css
@@ -786,7 +786,7 @@
   }
 }
 
-.box-edu-wrapper {
+.box-wrapper {
   background-color: var(--background-clr);
   border-radius: 0.5rem;
   max-height: 0;
@@ -812,7 +812,7 @@
   transition: opacity 0s ease-in-out 2.5s;
 }
 
-.edu-date {
+.date {
   color: var(--primary-clr);
   font-family: var(--titles-font);
   font-size: 1.45rem;
@@ -822,7 +822,7 @@
   text-align: center;
 }
 
-.edu-desc {
+.desc {
   color: var(--secondary-clr);
   font-family: var(--text-font);
   font-size: 2rem;
@@ -833,7 +833,7 @@
   text-transform: uppercase;
 }
 
-.edu-desc2 {
+.desc2 {
   color: var(--primary-clr);
   font-family: var(--text-font);
   font-size: 1.6rem;
@@ -843,7 +843,7 @@
   margin: 0 0 2rem 0;
   text-align: center;
 }
-.edu-desc2 .edu-desc-bold {
+.desc2 .desc-bold {
   font-weight: 700;
   text-transform: uppercase;
 }
