--- a/scss/_section-aboutme.scss
+++ b/scss/_section-aboutme.scss
@@ -22,7 +22,7 @@
   padding: 0;
   width: 100%;
   @include mq(576px) {
-    width: 45rem;
+    width: 50rem;
   }
   @include mq(768px) {
     align-items: center;
@@ -64,7 +64,7 @@
   }
   @include mq(576px) {
     font-size: 2.8rem;
-    height: 5rem;
+    // height: 5rem;
   }
   @include mq(768px) {
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
