Poprawiona dostępność na stronie i seo

--- a/css/main.css
+++ b/css/main.css
@@ -1364,7 +1364,7 @@
 }
 
 :root {
-  --background-clr: #5e565a;
+  --background-clr: #524c50;
   --primary-clr: #f3f1d8;
   --secondary-clr: #ff934f;
   --titles-font: 'Libre Baskerville', serif;
