Rezygnacja ze scrollingu w JavaScript na rzecz CSS (działa na ten dzień na Chromie i Firefoksie)

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -35,6 +35,12 @@ body {
 	padding: 0;
 }
 
+.container {
+	height: 100vh;
+	scroll-behavior: smooth;
+	overflow-y: scroll;
+}
+
 .sections-title {
 	color: var(--primary-clr);
 	font-family: var(--titles-font);
