--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,10 @@
-@import 'mixins';
+@import 'abstracts/variables';
+@import 'abstracts/mixins';
+
+@import 'base/normalize';
+@import 'base/reset';
+@import 'base/body';
+
 @import 'menu';
 @import 'section-header';
 @import 'section-aboutme';
@@ -6,57 +12,3 @@
 @import 'section-contact';
 @import 'footer';
 @import 'modals';
-
-:root {
-	// KOLORY
-	--background-clr: #524c50;
-	--primary-clr: #f3f1d8;
-	--secondary-clr: #ff934f;
-
-	//FONTY
-	--titles-font: 'Libre Baskerville', serif;
-	--text-font: 'Hind', sans-serif;
-	--name-font: 'Parisienne', cursive;
-}
-
-*,
-*::before,
-*::after {
-	box-sizing: border-box;
-}
-
-html {
-	font-size: 10px;
-}
-
-body {
-	background-color: var(--background-clr);
-	margin: 0;
-	padding: 0;
-}
-
-.container {
-	height: 100vh;
-	scroll-behavior: smooth;
-	overflow-y: scroll;
-}
-
-.sections-title {
-	color: var(--primary-clr);
-	font-family: var(--titles-font);
-	font-size: 3.6rem;
-	line-height: 3.6rem;
-	margin: 0 0 3rem 0;
-	text-align: center;
-	@include mq(576px) {
-		font-size: 4.5rem;
-		line-height: 4.5rem;
-	}
-	@include mq(768px) {
-		font-size: 6rem;
-		line-height: 6rem;
-	}
-	@include mq(992px) {
-		margin: 0 0 3rem 0;
-	}
-}
