--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,8 @@
   --background_dark-clr: #222;
   --primary-clr: #fff;
   --secondary-clr: #41ff14;
-  --titles-font: 'Libre Baskerville', serif;
-  --text-font: 'Hind', sans-serif;
-  --name-font: 'Parisienne'; }
+  --font: 'Open Sans', serif;
+  --box-radius: 0.5rem; }
 
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -315,14 +314,25 @@ html {
   font-size: 10px; }
 
 body {
-  background-color: var(--background-clr);
+  background-attachment: fixed;
+  background-image: url("../../img/background.jpg");
+  background-size: cover;
   margin: 0;
   padding: 0; }
+  body::after {
+    background-color: var(--background-clr);
+    content: '';
+    height: 100%;
+    left: 0;
+    opacity: 0.95;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: -1; }
 
 .container {
   height: 100vh;
-  scroll-behavior: smooth;
-  overflow-y: scroll; }
+  padding: 2rem; }
 
 .sections-title {
   color: var(--primary-clr);
@@ -343,438 +353,32 @@ body {
     .sections-title {
       margin: 0 0 3rem 0; } }
 
-.navbar {
-  align-items: center;
-  background-color: var(--secondary-clr);
-  display: flex;
-  height: 4rem;
-  justify-content: flex-end;
-  position: fixed;
-  width: 100%;
-  z-index: 1; }
-  @media screen and (min-width: 576px) {
-    .navbar {
-      height: 6rem; } }
-
-#hamburger-menu {
-  display: none;
+.hamburger-menu {
+  cursor: pointer;
+  height: 2.5rem;
   position: absolute;
-  z-index: 1; }
-  #hamburger-menu:checked ~ .navbar .navbar-list {
-    display: block;
-    transform: scale(1, 1); }
-  #hamburger-menu:checked ~ .navbar .navbar-list a {
-    opacity: 1;
-    transition: opacity 0.2s ease-in-out 0.2s; }
-  #hamburger-menu:checked ~ .hamburger-menu-label .hamburger-menu-bar {
-    transform: rotate(45deg); }
-  #hamburger-menu:checked ~ .hamburger-menu-label .hamburger-menu-bar::before {
-    display: none; }
-  #hamburger-menu:checked ~ .hamburger-menu-label .hamburger-menu-bar::after {
-    left: 0;
-    top: 0;
-    transform: rotate(-90deg); }
-
-.hamburger-menu-label {
-  align-items: center;
-  cursor: pointer;
-  display: flex;
-  height: 2rem;
-  justify-content: flex-end;
-  position: fixed;
-  right: 1rem;
-  top: 1rem;
-  width: 2.5rem;
-  z-index: 1; }
-  @media screen and (min-width: 576px) {
-    .hamburger-menu-label {
-      height: 3rem;
-      right: 1.5rem;
-      top: 1.5rem;
-      width: 3.5rem; } }
-  @media screen and (min-width: 768px) {
-    .hamburger-menu-label {
-      display: none; } }
-
-.hamburger-menu-bar {
-  background-color: var(--primary-clr);
-  border-radius: 1.5px;
-  cursor: pointer;
-  position: relative;
-  height: 0.4rem;
-  width: 2.5rem; }
-  @media screen and (min-width: 576px) {
-    .hamburger-menu-bar {
-      height: 0.6rem;
-      width: 3.5rem; } }
-  .hamburger-menu-bar::before, .hamburger-menu-bar::after {
+  right: 2rem;
+  top: 2rem;
+  width: 3rem; }
+  .hamburger-menu__bar {
     background-color: var(--primary-clr);
-    border-radius: 1.5px;
-    content: '';
-    height: 0.4rem;
+    border-radius: 0.5rem;
+    height: 0.5rem;
+    width: 100%;
+    height: 0.5rem;
     position: absolute;
-    width: 2.5rem; }
-    @media screen and (min-width: 576px) {
-      .hamburger-menu-bar::before, .hamburger-menu-bar::after {
-        height: 0.6rem;
-        width: 3.5rem; } }
-  .hamburger-menu-bar::before {
-    top: 0.8rem; }
-    @media screen and (min-width: 576px) {
-      .hamburger-menu-bar::before {
-        top: 1.2rem; } }
-  .hamburger-menu-bar::after {
-    bottom: 0.8rem; }
-    @media screen and (min-width: 576px) {
-      .hamburger-menu-bar::after {
-        bottom: 1.2rem; } }
-
-.navbar-list {
-  box-shadow: 0 5px 10px -7px rgba(0, 0, 0, 0.3);
-  list-style-type: none;
-  margin: 4rem 0 0 0;
-  padding: 0;
-  position: absolute;
-  top: 0;
-  transform: scale(1, 0);
-  transform-origin: top;
-  transition: transform 0.2s ease-in-out;
-  width: 100%;
-  z-index: 1; }
-  @media screen and (min-width: 576px) {
-    .navbar-list {
-      margin: 6rem 0 0 0; } }
-  @media screen and (min-width: 768px) {
-    .navbar-list {
-      box-shadow: none;
-      display: flex;
-      justify-content: space-evenly;
-      margin: 0;
-      padding: 0 1.8rem;
-      position: static;
-      transform: scale(1, 1); } }
-  @media screen and (min-width: 992px) {
-    .navbar-list {
-      padding: 0 1.6rem; } }
-  @media screen and (min-width: 1200px) {
-    .navbar-list {
-      margin: 0 auto;
-      padding: 0 3rem;
-      width: 120rem; } }
-  .navbar-list .menu-items {
-    background-color: var(--primary-clr);
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    height: 4rem;
-    transition: background-color 0.2s ease-in-out; }
-    @media screen and (min-width: 576px) {
-      .navbar-list .menu-items {
-        height: 6rem; } }
-    @media screen and (min-width: 768px) {
-      .navbar-list .menu-items {
-        background-color: var(--secondary-clr);
-        width: 25%; } }
-    .navbar-list .menu-items a {
-      color: var(--background-clr);
-      font-family: var(--text-font);
-      font-size: 1.8rem;
-      line-height: 4rem;
-      opacity: 0;
-      text-align: center;
-      text-decoration: none;
-      transition: color 0.2s ease-in-out, opacity 0.1s ease-in-out;
-      width: 100%; }
-      @media screen and (min-width: 576px) {
-        .navbar-list .menu-items a {
-          line-height: 6rem; } }
-      @media screen and (min-width: 768px) {
-        .navbar-list .menu-items a {
-          color: var(--primary-clr);
-          opacity: 1; } }
-      @media screen and (min-width: 992px) {
-        .navbar-list .menu-items a {
-          font-size: 2.4rem; } }
-      .navbar-list .menu-items a i {
-        margin-right: 0.5rem; }
-    .navbar-list .menu-items:hover {
-      background-color: #e6e4cf; }
-      .navbar-list .menu-items:hover a {
-        color: var(--background-clr); }
-
-.header {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  height: 614px;
-  overflow: hidden;
-  padding-top: 9rem;
-  position: relative; }
-  @media screen and (min-width: 576px) {
-    .header {
-      height: 985px;
-      padding-top: 11rem; } }
-  @media screen and (min-width: 768px) {
-    .header {
-      height: 1176px; } }
-  @media screen and (min-width: 992px) {
-    .header {
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      grid-template-rows: repeat(4, auto);
-      grid-column-gap: 2rem;
-      height: 697px;
-      padding: 13rem 2.6rem 0; } }
-  @media screen and (min-width: 1200px) {
-    .header {
-      grid-template-rows: repeat(4, auto);
-      grid-column-gap: 2rem;
-      margin: 0 auto;
-      padding: 13rem 4rem 0;
-      width: 120rem; } }
-
-.greetings {
-  color: var(--primary-clr);
-  font-family: var(--titles-font);
-  font-size: 5.5rem;
-  line-height: 5.5rem;
-  margin: 0; }
-  @media screen and (min-width: 576px) {
-    .greetings {
-      font-size: 9.8rem;
-      line-height: 9.8rem; } }
-  @media screen and (min-width: 992px) {
-    .greetings {
-      font-size: 12.5rem;
-      grid-column: 2 / 8;
-      justify-self: end; } }
-  @media screen and (min-width: 1200px) {
-    .greetings {
-      grid-row: 1 / 2;
-      justify-self: start; } }
-
-.greetings-sub {
-  border-bottom: 1px solid var(--primary-clr);
-  color: var(--secondary-clr);
-  font-family: var(--titles-font);
-  font-size: 2.35rem;
-  line-height: 2.35rem;
-  margin: 0;
-  padding-bottom: 1.3rem; }
-  @media screen and (min-width: 576px) {
-    .greetings-sub {
-      font-size: 4.2rem;
-      line-height: 4.2rem;
-      padding-bottom: 2.5rem; } }
-  @media screen and (min-width: 992px) {
-    .greetings-sub {
-      align-self: start;
-      border-bottom: none;
-      justify-self: end;
-      grid-column: 3 / 8;
-      padding-bottom: 0; } }
-  @media screen and (min-width: 1200px) {
-    .greetings-sub {
-      grid-row: 2 / 3;
-      justify-self: start;
-      margin-top: 1rem; } }
-
-.description {
-  color: var(--primary-clr);
-  font-family: var(--titles-font);
-  font-size: 1.4rem;
-  line-height: 2.2rem;
-  margin-bottom: 0;
-  margin-top: 1.2rem;
-  text-align: center;
-  width: 70%; }
-  @media screen and (min-width: 576px) {
-    .description {
-      font-size: 2rem;
-      line-height: 3.5rem;
-      width: 50%; } }
-  @media screen and (min-width: 992px) {
-    .description {
-      align-self: start;
-      grid-column: 3 / 8;
-      justify-self: end;
-      line-height: 3.6rem;
-      text-align: left;
-      width: 100%; } }
-  @media screen and (min-width: 1200px) {
-    .description {
-      grid-column: 3 / 7;
-      margin-top: 5rem; } }
-
-.self-picture-wrapper {
-  border: 5px solid var(--secondary-clr);
-  border-radius: 50%;
-  height: 10rem;
-  margin-top: 3.7rem;
-  width: 10rem; }
-  @media screen and (min-width: 576px) {
-    .self-picture-wrapper {
-      border: 9px solid var(--secondary-clr);
-      height: 18rem;
-      margin-top: 4rem;
-      width: 18rem; } }
-  @media screen and (min-width: 768px) {
-    .self-picture-wrapper {
-      height: 24.5rem;
-      margin-top: 5rem;
-      width: 24.5rem; } }
-  @media screen and (min-width: 992px) {
-    .self-picture-wrapper {
-      grid-column: 9 / 12;
-      grid-row: 1 / 3;
-      height: 18rem;
-      justify-self: center;
-      margin-top: 3rem;
-      width: 18rem; } }
-  @media screen and (min-width: 1200px) {
-    .self-picture-wrapper {
-      grid-column: 9 / 12;
-      grid-row: 1 / 4;
-      height: 26rem;
-      width: 26rem; } }
-
-.self-picture {
-  border-radius: 50%;
-  width: 100%; }
-
-.myname {
-  color: var(--primary-clr);
-  font-family: var(--name-font);
-  font-size: 3.6rem;
-  line-height: 4.3rem;
-  margin-top: 0.5rem;
-  text-align: center;
-  width: 60%; }
-  @media screen and (min-width: 576px) {
-    .myname {
-      font-size: 4.5rem;
-      line-height: 4.5rem;
-      margin-top: 2rem;
-      width: 100%; } }
-  @media screen and (min-width: 768px) {
-    .myname {
-      font-size: 6rem;
-      line-height: 6rem;
-      margin-top: 5rem; } }
-  @media screen and (min-width: 992px) {
-    .myname {
-      align-self: start;
-      font-size: 5.2rem;
-      line-height: 6.7rem;
-      margin-top: 1rem;
-      grid-column: 9 / 12; } }
-  @media screen and (min-width: 1200px) {
-    .myname {
-      grid-row: 4 / 5;
-      margin-top: 0; } }
-
-.triangle-small {
-  background-color: var(--primary-clr);
-  height: 70px;
-  position: absolute;
-  transform: rotate(45deg);
-  width: 70px;
-  left: -35px;
-  top: 278px; }
-  @media screen and (min-width: 576px) {
-    .triangle-small {
+    top: 1rem; }
+    .hamburger-menu__bar::before, .hamburger-menu__bar::after {
       background-color: var(--primary-clr);
-      height: 140px;
-      position: absolute;
-      transform: rotate(45deg);
-      width: 140px;
-      left: -70px;
-      top: 445px; } }
-  @media screen and (min-width: 768px) {
-    .triangle-small {
-      background-color: var(--primary-clr);
-      height: 214px;
-      position: absolute;
-      transform: rotate(45deg);
-      width: 214px;
-      left: -107px;
-      top: 455px; } }
-  @media screen and (min-width: 992px) {
-    .triangle-small {
-      display: none; } }
-
-.triangle-medium {
-  background-color: var(--primary-clr);
-  height: 108px;
-  position: absolute;
-  transform: rotate(45deg);
-  width: 108px;
-  bottom: 142px;
-  right: -54px; }
-  @media screen and (min-width: 576px) {
-    .triangle-medium {
-      background-color: var(--primary-clr);
-      height: 214px;
-      position: absolute;
-      transform: rotate(45deg);
-      width: 214px;
-      bottom: 90px;
-      right: -107px; } }
-  @media screen and (min-width: 768px) {
-    .triangle-medium {
-      background-color: var(--primary-clr);
-      height: 320px;
-      position: absolute;
-      transform: rotate(45deg);
-      width: 320px;
-      bottom: 575px;
-      right: -160px; } }
-  @media screen and (min-width: 992px) {
-    .triangle-medium {
-      display: none; } }
-
-.triangle-big {
-  background-color: var(--primary-clr);
-  height: 132px;
-  position: absolute;
-  transform: rotate(45deg);
-  width: 132px;
-  bottom: -67px;
-  left: -12px; }
-  @media screen and (min-width: 576px) {
-    .triangle-big {
-      background-color: var(--primary-clr);
-      height: 284px;
-      position: absolute;
-      transform: rotate(45deg);
-      width: 284px;
-      bottom: -142px;
-      left: -25px; } }
-  @media screen and (min-width: 768px) {
-    .triangle-big {
-      background-color: var(--primary-clr);
-      height: 460px;
-      position: absolute;
-      transform: rotate(45deg);
-      width: 460px;
-      bottom: -230px;
-      left: 146px; } }
-  @media screen and (min-width: 992px) {
-    .triangle-big {
-      background-color: var(--primary-clr);
-      grid-column: 1 / -1;
-      grid-row: 4 / 5;
-      height: 27rem;
-      margin: 78px auto;
-      position: static;
-      transform: rotate(45deg);
-      width: 27rem; } }
-  @media screen and (min-width: 1200px) {
-    .triangle-big {
-      grid-row: 4 / 6;
-      height: 32rem;
-      margin: 99px auto;
-      width: 32rem; } }
+      border-radius: 0.5rem;
+      height: 0.5rem;
+      width: 100%;
+      content: '';
+      position: absolute; }
+    .hamburger-menu__bar::before {
+      top: -1rem; }
+    .hamburger-menu__bar::after {
+      top: 1rem; }
 
 .about-me {
   align-items: center;
