--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,181 +1,30 @@
-.navbar {
-  align-items: center;
-  background-color: var(--secondary-clr);
-  display: flex;
-  height: 4rem;
-  justify-content: flex-end;
-  position: fixed;
-  width: 100%;
-  z-index: 1;
-  @include mq(576px) {
-    height: 6rem;
-  }
-}
+.hamburger-menu {
+	cursor: pointer;
+	height: 2.5rem;
+	position: absolute;
+	right: 2rem;
+	top: 2rem;
+	width: 3rem;
 
-#hamburger-menu {
-  display: none;
-  position: absolute;
-  z-index: 1;
-  &:checked ~ .navbar .navbar-list {
-    display: block;
-    transform: scale(1, 1);
-  }
-  &:checked ~ .navbar .navbar-list a {
-    opacity: 1;
-    transition: opacity 0.2s ease-in-out 0.2s;
-  }
-  &:checked ~ .hamburger-menu-label .hamburger-menu-bar {
-    transform: rotate(45deg);
-  }
-  &:checked ~ .hamburger-menu-label .hamburger-menu-bar::before {
-    display: none;
-  }
-  &:checked ~ .hamburger-menu-label .hamburger-menu-bar::after {
-    left: 0;
-    top: 0;
-    transform: rotate(-90deg);
-  }
-}
+	&__bar {
+		@include hamburger-bar(0.5rem, 100%);
+		height: 0.5rem;
+		position: absolute;
+		top: 1rem;
 
-.hamburger-menu-label {
-  align-items: center;
-  cursor: pointer;
-  display: flex;
-  height: 2rem;
-  justify-content: flex-end;
-  position: fixed;
-  right: 1rem;
-  top: 1rem;
-  width: 2.5rem;
-  z-index: 1;
-  @include mq(576px) {
-    height: 3rem;
-    right: 1.5rem;
-    top: 1.5rem;
-    width: 3.5rem;
-  }
-  @include mq(768px) {
-    display: none;
-  }
-}
+		&::before,
+		&::after {
+			@include hamburger-bar(0.5rem, 100%);
+			content: '';
+			position: absolute;
+		}
 
-.hamburger-menu-bar {
-  @include hamburger-bar;
-  cursor: pointer;
-  position: relative;
-  height: 0.4rem;
-  width: 2.5rem;
-  @include mq(576px) {
-    height: 0.6rem;
-    width: 3.5rem;
-  }
+		&::before {
+			top: -1rem;
+		}
 
-  &::before,
-  &::after {
-    @include hamburger-bar;
-    content: '';
-    height: 0.4rem;
-    position: absolute;
-    width: 2.5rem;
-    @include mq(576px) {
-      height: 0.6rem;
-      width: 3.5rem;
-    }
-  }
-
-  &::before {
-    top: 0.8rem;
-    @include mq(576px) {
-      top: 1.2rem;
-    }
-  }
-  &::after {
-    bottom: 0.8rem;
-    @include mq(576px) {
-      bottom: 1.2rem;
-    }
-  }
-}
-
-.navbar-list {
-  box-shadow: 0 5px 10px -7px rgba(0, 0, 0, 0.3);
-  list-style-type: none;
-  margin: 4rem 0 0 0;
-  padding: 0;
-  position: absolute;
-  top: 0;
-  transform: scale(1, 0);
-  transform-origin: top;
-  transition: transform 0.2s ease-in-out;
-  width: 100%;
-  z-index: 1;
-  @include mq(576px) {
-    margin: 6rem 0 0 0;
-  }
-  @include mq(768px) {
-    box-shadow: none;
-    display: flex;
-    justify-content: space-evenly;
-    margin: 0;
-    padding: 0 1.8rem;
-    position: static;
-    transform: scale(1, 1);
-  }
-  @include mq(992px) {
-    padding: 0 1.6rem;
-  }
-  @include mq(1200px) {
-    margin: 0 auto;
-    padding: 0 3rem;
-    width: 120rem;
-  }
-
-  .menu-items {
-    background-color: var(--primary-clr);
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    height: 4rem;
-    transition: background-color 0.2s ease-in-out;
-    @include mq(576px) {
-      height: 6rem;
-    }
-    @include mq(768px) {
-      background-color: var(--secondary-clr);
-      width: 25%;
-    }
-
-    a {
-      color: var(--background-clr);
-      font-family: var(--text-font);
-      font-size: 1.8rem;
-      line-height: 4rem;
-      opacity: 0;
-      text-align: center;
-      text-decoration: none;
-      transition: color 0.2s ease-in-out, opacity 0.1s ease-in-out;
-      width: 100%;
-      @include mq(576px) {
-        line-height: 6rem;
-      }
-      @include mq(768px) {
-        color: var(--primary-clr);
-        opacity: 1;
-      }
-      @include mq(992px) {
-        font-size: 2.4rem;
-      }
-
-      i {
-        margin-right: 0.5rem;
-      }
-    }
-
-    &:hover {
-      background-color: #e6e4cf;
-      a {
-        color: var(--background-clr);
-      }
-    }
-  }
+		&::after {
+			top: 1rem;
+		}
+	}
 }
