--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,12 +1,13 @@
 :root {
-	// KOLORY
+	// COLORS
 	--background-clr: #333;
 	--background_dark-clr: #222;
 	--primary-clr: #fff;
 	--secondary-clr: #41ff14;
 
-	//FONTY
-	--titles-font: 'Libre Baskerville', serif;
-	--text-font: 'Hind', sans-serif;
-	--name-font: 'Parisienne';
+	// FONTS
+	--font: 'Open Sans', serif;
+
+	// OTHERS
+	--box-radius: 0.5rem;
 }
