--- a/scss/base/_body.scss
+++ b/scss/base/_body.scss
@@ -3,15 +3,30 @@ html {
 }
 
 body {
-	background-color: var(--background-clr);
+	background-attachment: fixed;
+	background-image: url('../../img/background.jpg');
+	background-size: cover;
 	margin: 0;
 	padding: 0;
+
+	&::after {
+		background-color: var(--background-clr);
+		content: '';
+		height: 100%;
+		left: 0;
+		opacity: 0.95;
+		position: absolute;
+		top: 0;
+		width: 100%;
+		z-index: -1;
+	}
 }
 
 .container {
 	height: 100vh;
-	scroll-behavior: smooth;
-	overflow-y: scroll;
+	padding: 2rem;
+	// scroll-behavior: smooth;
+	// overflow-y: scroll;
 }
 
 .sections-title {
