--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -1,3 +1,71 @@
 .header {
-	// padding: 0;
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 100%;
+
+	&__my-photo {
+		border: 0.5rem solid var(--secondary-clr);
+		border-radius: 50%;
+		display: block;
+		margin: 0 auto;
+		height: 10rem;
+		width: 10rem;
+	}
+
+	&__my-name {
+		color: var(--primary-clr);
+		font-size: 4rem;
+		font-weight: bold;
+		margin: 1rem auto;
+		text-align: center;
+		width: 21rem;
+
+		&--green {
+			color: var(--secondary-clr);
+			display: block;
+		}
+	}
+
+	.professions {
+		background-color: rgba(255, 255, 255, 0.1);
+		border-radius: var(--box-radius);
+		text-align: center;
+		padding: 0.5rem 0;
+		width: 28rem;
+
+		&__profession {
+			font-size: 1.8rem;
+			font-weight: normal;
+			line-height: 3rem;
+			margin: 0;
+
+			&--green {
+				color: var(--secondary-clr);
+				font-size: 1.8rem;
+				font-weight: normal;
+				line-height: 3rem;
+				margin: 0;
+			}
+		}
+	}
+
+	.header-icons {
+		display: flex;
+		justify-content: space-between;
+		margin-top: 2rem;
+
+		.header-icons__facebook,
+		.header-icons__github,
+		.header-icons__linkedin {
+			color: var(--primary-clr);
+			font-size: 3rem;
+			margin-right: 1.5rem;
+		}
+
+		.header-icons__linkedin {
+			margin-right: 0;
+		}
+	}
 }
