--- a/css/main.css
+++ b/css/main.css
@@ -360,7 +360,7 @@ body {
 
 .header {
   align-items: center;
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   width: 100%; }
@@ -417,7 +417,8 @@ body {
   position: absolute;
   right: 2rem;
   top: 2rem;
-  width: 3rem; }
+  width: 3rem;
+  z-index: 1; }
   .hamburger-menu__bar {
     background-color: var(--primary-clr);
     border-radius: 0.5rem;
@@ -437,6 +438,39 @@ body {
       top: -1rem; }
     .hamburger-menu__bar::after {
       top: 1rem; }
+
+.menu {
+  height: 100%;
+  position: fixed;
+  width: 100%; }
+  .menu__header {
+    align-items: center;
+    display: flex;
+    height: 50vh; }
+  .menu__list {
+    background-color: rgba(255, 255, 255, 0.1);
+    display: flex;
+    flex-direction: column;
+    height: 50vh;
+    justify-content: center;
+    margin: 0;
+    padding: 0; }
+    .menu__list .list__item {
+      list-style-type: none;
+      text-align: center; }
+      .menu__list .list__item a {
+        color: var(--primary-clr);
+        font-size: 1.8rem;
+        text-decoration: none;
+        text-transform: uppercase;
+        transition: color 0.3s ease-in-out; }
+        .menu__list .list__item a:hover {
+          color: var(--secondary-clr); }
+      .menu__list .list__item:not(:last-child) {
+        margin-bottom: 2.5rem; }
+      .menu__list .list__item .highlighted {
+        color: var(--secondary-clr);
+        font-weight: bold; }
 
 .about-me {
   align-items: center;
