--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -5,6 +5,7 @@
 	right: 2rem;
 	top: 2rem;
 	width: 3rem;
+	z-index: 1;
 
 	&__bar {
 		@include hamburger-bar(0.5rem, 100%);
@@ -25,6 +26,55 @@
 
 		&::after {
 			top: 1rem;
+		}
+	}
+}
+
+.menu {
+	// display: none;
+	height: 100%;
+	position: fixed;
+	width: 100%;
+
+	&__header {
+		align-items: center;
+		display: flex;
+		height: 50vh;
+	}
+
+	&__list {
+		background-color: rgba(255, 255, 255, 0.1);
+		display: flex;
+		flex-direction: column;
+		height: 50vh;
+		justify-content: center;
+		margin: 0;
+		padding: 0;
+
+		.list__item {
+			list-style-type: none;
+			text-align: center;
+
+			a {
+				color: var(--primary-clr);
+				font-size: 1.8rem;
+				text-decoration: none;
+				text-transform: uppercase;
+				transition: color 0.3s ease-in-out;
+
+				&:hover {
+					color: var(--secondary-clr);
+				}
+			}
+
+			&:not(:last-child) {
+				margin-bottom: 2.5rem;
+			}
+
+			.highlighted {
+				color: var(--secondary-clr);
+				font-weight: bold;
+			}
 		}
 	}
 }
