--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -1,6 +1,7 @@
 .header {
 	align-items: center;
-	display: flex;
+	// display: flex;
+	display: none;
 	flex-direction: column;
 	justify-content: center;
 	width: 100%;
