--- a/css/main.css
+++ b/css/main.css
@@ -360,7 +360,7 @@ body {
 
 .header {
   align-items: center;
-  display: none;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   width: 100%; }
@@ -411,6 +411,9 @@ body {
     .header .header-icons .header-icons__linkedin {
       margin-right: 0; }
 
+.hide-header {
+  visibility: hidden; }
+
 .hamburger-menu {
   cursor: pointer;
   height: 2.5rem;
@@ -442,11 +445,18 @@ body {
 .menu {
   height: 100%;
   position: fixed;
+  transition: all 0.3s ease-in-out;
+  visibility: hidden;
   width: 100%; }
   .menu__header {
     align-items: center;
     display: flex;
     height: 50vh; }
+    .menu__header .header__my-name {
+      transform: translateY(-300%);
+      transition: transform 0.3s ease-in-out; }
+      .menu__header .header__my-name.show {
+        transform: translateY(0); }
   .menu__list {
     background-color: rgba(255, 255, 255, 0.1);
     display: flex;
@@ -454,10 +464,19 @@ body {
     height: 50vh;
     justify-content: center;
     margin: 0;
-    padding: 0; }
+    padding: 0;
+    transform: translateY(100%);
+    transition: transform 0.3s ease-in-out; }
+    .menu__list.show {
+      transform: translateY(0); }
     .menu__list .list__item {
       list-style-type: none;
-      text-align: center; }
+      text-align: center;
+      transform: translateX(-100%);
+      transition: transform 0.3s ease-in-out;
+      transition-delay: 300ms; }
+      .menu__list .list__item.show {
+        transform: translateX(0); }
       .menu__list .list__item a {
         color: var(--primary-clr);
         font-size: 1.8rem;
@@ -471,6 +490,9 @@ body {
       .menu__list .list__item .highlighted {
         color: var(--secondary-clr);
         font-weight: bold; }
+
+.show-menu {
+  visibility: visible; }
 
 .about-me {
   align-items: center;
