--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -31,15 +31,25 @@
 }
 
 .menu {
-	// display: none;
 	height: 100%;
 	position: fixed;
+	transition: all 0.3s ease-in-out;
+	visibility: hidden;
 	width: 100%;
 
 	&__header {
 		align-items: center;
 		display: flex;
 		height: 50vh;
+
+		.header__my-name {
+			transform: translateY(-300%);
+			transition: transform 0.3s ease-in-out;
+
+			&.show {
+				transform: translateY(0);
+			}
+		}
 	}
 
 	&__list {
@@ -50,10 +60,23 @@
 		justify-content: center;
 		margin: 0;
 		padding: 0;
+		transform: translateY(100%);
+		transition: transform 0.3s ease-in-out;
+
+		&.show {
+			transform: translateY(0);
+		}
 
 		.list__item {
 			list-style-type: none;
 			text-align: center;
+			transform: translateX(-100%);
+			transition: transform 0.3s ease-in-out;
+			transition-delay: 300ms;
+
+			&.show {
+				transform: translateX(0);
+			}
 
 			a {
 				color: var(--primary-clr);
@@ -77,4 +100,8 @@
 			}
 		}
 	}
+}
+
+.show-menu {
+	visibility: visible;
 }
