--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -1,7 +1,6 @@
 .header {
 	align-items: center;
-	// display: flex;
-	display: none;
+	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	width: 100%;
@@ -69,4 +68,8 @@
 			margin-right: 0;
 		}
 	}
+}
+
+.hide-header {
+	visibility: hidden;
 }
