--- a/css/main.css
+++ b/css/main.css
@@ -422,6 +422,13 @@ body {
   top: 2rem;
   width: 3rem;
   z-index: 1; }
+  .hamburger-menu.close-btn .hamburger-menu__bar {
+    transform: rotate(-315deg); }
+  .hamburger-menu.close-btn .hamburger-menu__bar::before {
+    visibility: hidden; }
+  .hamburger-menu.close-btn .hamburger-menu__bar::after {
+    top: 0;
+    transform: rotate(90deg); }
   .hamburger-menu__bar {
     background-color: var(--primary-clr);
     border-radius: 0.5rem;
@@ -429,7 +436,8 @@ body {
     width: 100%;
     height: 0.5rem;
     position: absolute;
-    top: 1rem; }
+    top: 1rem;
+    transition: transform 0.3s ease-in-out; }
     .hamburger-menu__bar::before, .hamburger-menu__bar::after {
       background-color: var(--primary-clr);
       border-radius: 0.5rem;
