Add header to aboutme section and reorganized scss files structure

--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -5,6 +5,14 @@
 	width: $width;
 }
 
+@mixin myphoto($size) {
+	border: 0.5rem solid var(--secondary-clr);
+	border-radius: 50%;
+	display: block;
+	height: $size;
+	width: $size;
+}
+
 @mixin mq($width) {
 	@media screen and (min-width: $width) {
 		@content;
