--- a/css/main.css
+++ b/css/main.css
@@ -339,38 +339,20 @@ body {
   justify-content: center;
   padding: 2rem; }
 
-.sections-title {
-  color: var(--primary-clr);
-  font-family: var(--titles-font);
-  font-size: 3.6rem;
-  line-height: 3.6rem;
-  margin: 0 0 3rem 0;
-  text-align: center; }
-  @media screen and (min-width: 576px) {
-    .sections-title {
-      font-size: 4.5rem;
-      line-height: 4.5rem; } }
-  @media screen and (min-width: 768px) {
-    .sections-title {
-      font-size: 6rem;
-      line-height: 6rem; } }
-  @media screen and (min-width: 992px) {
-    .sections-title {
-      margin: 0 0 3rem 0; } }
-
 .header {
   align-items: center;
   display: flex;
   flex-direction: column;
+  height: 100vh;
   justify-content: center;
   width: 100%; }
   .header__my-photo {
     border: 0.5rem solid var(--secondary-clr);
     border-radius: 50%;
     display: block;
-    margin: 0 auto;
     height: 10rem;
-    width: 10rem; }
+    width: 10rem;
+    margin: 0 auto; }
   .header__my-name {
     color: var(--primary-clr);
     font-size: 4rem;
@@ -414,6 +396,110 @@ body {
 .hide-header {
   visibility: hidden; }
 
+.header__title {
+  color: var(--secondary-clr);
+  font-size: 4rem;
+  font-weight: bold;
+  margin: 0;
+  text-transform: uppercase; }
+.header__subtitle {
+  font-size: 1.8rem;
+  font-weight: normal;
+  margin: 1rem 0 0 0; }
+.header__my-photo {
+  border: 0.5rem solid var(--secondary-clr);
+  border-radius: 50%;
+  display: block;
+  height: 10rem;
+  width: 10rem;
+  margin: 2.5rem auto; }
+.header__description {
+  font-size: 1.6rem;
+  line-height: 2.5rem;
+  margin: 0;
+  text-align: center;
+  width: 24rem; }
+
+.arrows {
+  margin: 0 auto;
+  width: 5rem; }
+  .arrows.hide {
+    display: none; }
+  .arrows__arrow:nth-child(1) {
+    animation-name: arrowMove;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate-reverse;
+    bottom: 2rem;
+    border-top: 2.5rem solid var(--secondary-clr);
+    border-left: 2.5rem solid transparent;
+    border-right: 2.5rem solid transparent;
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%); }
+  .arrows__arrow:nth-child(2) {
+    animation-name: arrowMove;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate-reverse;
+    bottom: 1.5rem;
+    border-top: 2rem solid var(--secondary-clr);
+    border-left: 2rem solid transparent;
+    border-right: 2rem solid transparent;
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%); }
+  .arrows__arrow:nth-child(3) {
+    animation-name: arrowMove;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate-reverse;
+    bottom: 1rem;
+    border-top: 1.5rem solid var(--secondary-clr);
+    border-left: 1.5rem solid transparent;
+    border-right: 1.5rem solid transparent;
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%); }
+
+@supports (clip-path: polygon(0 0, 100% 0, 50% 100%)) {
+  .arrows {
+    margin: 0 auto;
+    width: 5rem; }
+    .arrows.hide {
+      display: none; }
+    .arrows__arrow:nth-child(1) {
+      background-color: var(--secondary-clr);
+      bottom: 2rem;
+      clip-path: polygon(0 0, 100% 0, 50% 100%);
+      height: 2.5rem;
+      left: 50%;
+      position: absolute;
+      transform: translateX(-50%);
+      width: 5rem; }
+    .arrows__arrow:nth-child(2) {
+      background-color: var(--secondary-clr);
+      bottom: 1.5rem;
+      clip-path: polygon(0 0, 100% 0, 50% 100%);
+      height: 2rem;
+      left: 50%;
+      position: absolute;
+      transform: translateX(-50%);
+      width: 4rem; }
+    .arrows__arrow:nth-child(3) {
+      background-color: var(--secondary-clr);
+      bottom: 1rem;
+      clip-path: polygon(0 0, 100% 0, 50% 100%);
+      height: 1.5rem;
+      left: 50%;
+      position: absolute;
+      transform: translateX(-50%);
+      width: 3rem; } }
+@keyframes arrowMove {
+  0% {
+    transform: translate(-50%, -30%); }
+  100% {
+    transform: translate(-50%, 20%); } }
 .hamburger-menu {
   cursor: pointer;
   height: 2.5rem;
@@ -500,499 +586,6 @@ body {
         font-weight: bold; }
 
 .show-menu {
-  visibility: visible; }
-
-.about-me {
-  align-items: center;
-  background-color: var(--secondary-clr);
-  display: flex;
-  flex-direction: column;
-  padding: 3rem 1rem; }
-  @media screen and (min-width: 576px) {
-    .about-me {
-      padding: 3rem 0; } }
-  @media screen and (min-width: 768px) {
-    .about-me {
-      padding: 3rem 0 5rem; } }
-  @media screen and (min-width: 992px) {
-    .about-me {
-      padding: 5rem 0; } }
-
-.list {
-  display: grid;
-  grid-row-gap: 1rem;
-  margin: 0;
-  padding: 0;
-  width: 100%; }
-  @media screen and (min-width: 576px) {
-    .list {
-      width: 50rem; } }
-  @media screen and (min-width: 768px) {
-    .list {
-      align-items: center;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      width: 100%; } }
-  @media screen and (min-width: 992px) {
-    .list {
-      width: 78rem; } }
-  @media screen and (min-width: 1200px) {
-    .list {
-      justify-content: space-between;
-      width: 93rem; } }
-
-.box {
-  background-color: var(--primary-clr);
-  border-radius: 0.5rem;
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  min-height: 4rem;
-  justify-content: center;
-  list-style-type: none;
-  padding: 0 10px;
-  width: 100%; }
-  @media screen and (min-width: 768px) {
-    .box {
-      box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
-      flex-direction: column;
-      height: 12rem;
-      justify-content: center;
-      line-height: 3.2rem;
-      margin-bottom: 3rem;
-      margin-right: 1rem;
-      padding: 0;
-      text-align: center;
-      width: 24rem; }
-      .box:nth-child(3) {
-        margin-right: 0; }
-      .box:nth-child(4) {
-        margin-bottom: 0; }
-      .box:nth-child(5) {
-        margin-bottom: 0; } }
-  @media screen and (min-width: 1200px) {
-    .box {
-      margin: 0;
-      width: 17rem; } }
-
-.box-title {
-  align-items: center;
-  color: var(--background-clr);
-  display: flex;
-  text-transform: uppercase; }
-  @media screen and (min-width: 768px) {
-    .box-title {
-      flex-direction: column; } }
-  .box-title i {
-    font-size: 2.2rem; }
-    @media screen and (min-width: 768px) {
-      .box-title i {
-        font-size: 3.6rem; } }
-    @media screen and (min-width: 1200px) {
-      .box-title i {
-        font-size: 3rem; } }
-  @media screen and (min-width: 576px) {
-    .box-title {
-      font-size: 2.8rem; } }
-
-.category {
-  font-family: var(--text-font);
-  font-size: 2.2rem;
-  margin: 3px 0 0 1.2rem; }
-  @media screen and (min-width: 576px) {
-    .category {
-      font-size: 2.8rem; } }
-  @media screen and (min-width: 768px) {
-    .category {
-      margin: 0.7rem 0 0 0; } }
-  @media screen and (min-width: 1200px) {
-    .category {
-      font-size: 2.4rem; } }
-
-.box-wrapper {
-  background-color: var(--background-clr);
-  border-radius: 0.5rem;
-  max-height: 0;
-  opacity: 0;
-  transform: scale(1, 0);
-  transform-origin: top;
-  transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out, transform 0.3s ease-in-out; }
-
-.box-skills-languages-wrapper {
-  height: 0;
-  opacity: 0;
-  transform: scale(1, 0);
-  transform-origin: top;
-  transition: opacity 0s ease-in-out 2.5s; }
-
-.date {
-  color: var(--primary-clr);
-  font-family: var(--titles-font);
-  font-size: 1.45rem;
-  font-style: italic;
-  font-weight: 100;
-  margin: 0 0 2rem 0;
-  text-align: center; }
-
-.desc {
-  color: var(--secondary-clr);
-  font-family: var(--text-font);
-  font-size: 2rem;
-  font-weight: 700;
-  line-height: 2.4rem;
-  margin: 0 0 1.5rem 0;
-  text-align: center;
-  text-transform: uppercase; }
-
-.desc2 {
-  color: var(--primary-clr);
-  font-family: var(--text-font);
-  font-size: 1.6rem;
-  line-height: 2rem;
-  list-style-position: inside;
-  list-style-type: square;
-  margin: 0 0 2rem 0;
-  text-align: center; }
-  .desc2 .desc-bold {
-    font-weight: 700;
-    text-transform: uppercase; }
-
-.bar {
-  background-color: var(--background-clr);
-  height: 1px;
-  position: relative; }
-
-.bar-ball {
-  background-color: var(--background-clr);
-  border-radius: 50%;
-  height: 1.6rem;
-  left: 0;
-  position: absolute;
-  top: -8px;
-  transition: left 1s linear 1s;
-  width: 1.6rem; }
-
-.is-visible {
-  max-height: 60rem;
-  opacity: 1;
-  margin-bottom: 2rem;
-  padding: 1.5rem 1rem 0;
-  transform: scale(1, 1);
-  transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out, transform 0.3s ease-in-out 0.3s; }
-  .is-visible:last-child {
-    margin-bottom: 1rem; }
-
-.is-visible2 {
-  height: auto;
-  margin-bottom: 2rem;
-  opacity: 1;
-  padding: 1.5rem 1rem 0;
-  transform: scale(1, 1);
-  transition: opacity 0s ease-in-out, transform 0.3s ease-in-out 0.3s; }
-
-.portfolio {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  padding: 3rem 1rem 5rem; }
-  @media screen and (min-width: 768px) {
-    .portfolio {
-      padding: 3rem 1.8rem 5rem; } }
-  @media screen and (min-width: 992px) {
-    .portfolio {
-      padding: 5rem 1.6rem; } }
-  @media screen and (min-width: 1200px) {
-    .portfolio {
-      padding: 5rem 4rem; } }
-  .portfolio .description {
-    margin-top: -0.5rem; }
-    @media screen and (min-width: 576px) {
-      .portfolio .description {
-        font-size: 1.8rem;
-        line-height: 2.8rem; } }
-    @media screen and (min-width: 768px) {
-      .portfolio .description {
-        width: 50%; } }
-    @media screen and (min-width: 992px) {
-      .portfolio .description {
-        margin: 0 auto;
-        text-align: center; } }
-    @media screen and (min-width: 1200px) {
-      .portfolio .description {
-        width: 35rem; } }
-
-@media screen and (min-width: 768px) {
-  .portfolio-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    width: 100%; }
-    .portfolio-grid .sections-title {
-      grid-column: 1 / -1; } }
-@media screen and (min-width: 992px) {
-  .portfolio-grid {
-    padding: 0 9rem; } }
-@media screen and (min-width: 1200px) {
-  .portfolio-grid {
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 2rem;
-    padding: 0;
-    width: 120rem; } }
-
-.portfolio-example-wrapper {
-  background-color: var(--primary-clr);
-  border-radius: 0.5rem;
-  box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.3);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin: 4.4rem 0 0 0;
-  padding-top: 2rem;
-  position: relative;
-  transition: box-shadow 0.3s ease-in-out;
-  width: 30rem; }
-  @media screen and (min-width: 576px) {
-    .portfolio-example-wrapper {
-      padding-top: 2.5rem;
-      width: 45rem; } }
-  @media screen and (min-width: 768px) {
-    .portfolio-example-wrapper {
-      align-self: start;
-      justify-self: center;
-      width: 30.5rem; } }
-  @media screen and (min-width: 992px) {
-    .portfolio-example-wrapper {
-      width: 38rem; } }
-  @media screen and (min-width: 1200px) {
-    .portfolio-example-wrapper {
-      width: 100%; } }
-  .portfolio-example-wrapper:hover {
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3); }
-  .portfolio-example-wrapper:hover::before {
-    box-shadow: none; }
-  .portfolio-example-wrapper:hover::after {
-    box-shadow: none; }
-  @media screen and (min-width: 768px) {
-    .portfolio-example-wrapper .portfolio-link {
-      height: 16rem; } }
-  @media screen and (min-width: 992px) {
-    .portfolio-example-wrapper .portfolio-link {
-      height: 19.5rem; } }
-  .portfolio-example-wrapper::before, .portfolio-example-wrapper::after {
-    background-color: transparent;
-    bottom: 8.5%;
-    box-shadow: 0 25px 10px 0 rgba(0, 0, 0, 0.2);
-    content: '';
-    position: absolute;
-    transition: box-shadow 0.3s ease-in-out;
-    width: 95%;
-    height: 2rem;
-    z-index: -1; }
-  .portfolio-example-wrapper::before {
-    left: 1rem;
-    transform: rotate(-5deg); }
-  .portfolio-example-wrapper::after {
-    right: 1rem;
-    transform: rotate(5deg); }
-
-.portfolio-example-img {
-  display: block;
-  margin: 0 auto;
-  max-height: 20rem;
-  max-width: 90%; }
-  @media screen and (min-width: 768px) {
-    .portfolio-example-img {
-      max-height: 16rem; } }
-  @media screen and (min-width: 992px) {
-    .portfolio-example-img {
-      max-height: 19.5rem; } }
-
-.portfolio-example-description-wrapper {
-  background-color: var(--secondary-clr);
-  border-bottom-left-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
-  margin-top: 2.5rem;
-  padding: 2rem 2rem 2rem 2.5rem;
-  width: 100%; }
-  @media screen and (min-width: 576px) {
-    .portfolio-example-description-wrapper {
-      padding: 2.5rem 3rem 2.5rem; } }
-  @media screen and (min-width: 768px) {
-    .portfolio-example-description-wrapper {
-      padding: 2.5rem 1.5rem 1.5rem; } }
-  @media screen and (min-width: 992px) {
-    .portfolio-example-description-wrapper {
-      padding: 2rem 3rem; } }
-
-.portfolio-example-title {
-  color: var(--primary-clr);
-  font-family: var(--text-font);
-  font-weight: bold;
-  font-size: 2.3rem;
-  line-height: 2.3rem;
-  margin: 0; }
-  @media screen and (min-width: 576px) {
-    .portfolio-example-title {
-      font-size: 3rem;
-      line-height: 3rem; } }
-  @media screen and (min-width: 768px) {
-    .portfolio-example-title {
-      font-size: 2.4rem;
-      line-height: 2.4rem; } }
-  @media screen and (min-width: 992px) {
-    .portfolio-example-title {
-      font-size: 2.8rem;
-      line-height: 2.8rem; } }
-
-.portfolio-example-description {
-  color: var(--primary-clr);
-  font-family: var(--text-font);
-  font-size: 1.4rem;
-  line-height: 2.1rem;
-  margin: 1rem 0 0 0; }
-  @media screen and (min-width: 576px) {
-    .portfolio-example-description {
-      font-size: 1.6rem;
-      line-height: 2.3rem; } }
-  @media screen and (min-width: 992px) {
-    .portfolio-example-description {
-      font-size: 1.8rem;
-      line-height: 2.5rem; } }
-
-.contact {
-  align-items: center;
-  background-color: var(--secondary-clr);
-  padding: 3rem 0;
-  display: flex;
-  flex-direction: column; }
-  @media screen and (min-width: 992px) {
-    .contact {
-      padding: 5rem 0; } }
-  .contact i {
-    color: var(--background-clr);
-    font-size: 4rem;
-    transition: color 0.2s ease-in-out; }
-    @media screen and (min-width: 768px) {
-      .contact i {
-        font-size: 4.8rem; } }
-  .contact .description {
-    color: var(--primary-clr);
-    font-family: var(--text-font);
-    font-size: 1.4rem;
-    line-height: 2rem;
-    margin-bottom: 2rem;
-    margin-top: 1rem;
-    text-align: center;
-    width: 100%; }
-    @media screen and (min-width: 576px) {
-      .contact .description {
-        font-size: 1.6rem;
-        line-height: 2.2rem; } }
-    @media screen and (min-width: 1200px) {
-      .contact .description {
-        font-size: 2rem;
-        line-height: 2.6rem;
-        margin-bottom: 5rem; } }
-
-.social-media {
-  display: flex;
-  justify-content: space-evenly;
-  width: 100%; }
-  @media screen and (min-width: 992px) {
-    .social-media {
-      justify-content: space-between;
-      width: 46rem; } }
-  .social-media i:hover {
-    color: var(--primary-clr); }
-
-.footer {
-  padding: 2rem 0; }
-  @media screen and (min-width: 576px) {
-    .footer {
-      padding: 2.5rem 0; } }
-  @media screen and (min-width: 768px) {
-    .footer {
-      padding: 3rem 0; } }
-  .footer .copyright {
-    color: var(--primary-clr);
-    font-family: var(--titles-font);
-    font-size: 1.4rem;
-    margin: 0;
-    text-align: center; }
-    @media screen and (min-width: 576px) {
-      .footer .copyright {
-        font-size: 1.6rem; } }
-
-.modal {
-  align-items: center;
-  background-color: var(--background-clr);
-  display: flex;
-  height: 100vh;
-  justify-content: center;
-  left: 0;
-  position: fixed;
-  top: 0;
-  visibility: hidden;
-  width: 100vw;
-  z-index: 1; }
-  .modal .box-title {
-    margin-bottom: 1rem;
-    width: 100%; }
-  .modal .category {
-    margin: 0; }
-
-.modal-edu .modal-container,
-.modal-languages .modal-container {
-  align-items: center;
-  background-color: var(--primary-clr);
-  border-radius: 0.5rem;
-  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  height: auto;
-  overflow-y: auto;
-  padding: 2rem 0;
-  position: relative;
-  transform: scale(0);
-  transition: transform 0.5s ease-in-out;
-  visibility: hidden;
-  width: 55rem; }
-
-.modal-work .modal-container,
-.modal-skills .modal-container,
-.modal-courses .modal-container {
-  align-items: center;
-  background-color: var(--primary-clr);
-  border-radius: 0.5rem;
-  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  height: 80vh;
-  overflow-y: auto;
-  position: relative;
-  transform: scale(0);
-  transition: transform 0.5s ease-in-out;
-  visibility: hidden;
-  width: 55rem;
-  padding: 2rem 0; }
-
-.modal-box-wrapper {
-  background-color: var(--background-clr);
-  border-radius: 0.5rem;
-  margin-bottom: 2rem;
-  padding: 1.5rem 1rem 0;
-  width: 80%; }
-  .modal-box-wrapper:last-child {
-    margin-bottom: 1rem; }
-
-.modal-box-skills-languages-wrapper {
-  margin: 0 auto 2rem;
-  padding: 1.5rem 1rem 0;
-  width: 80%; }
-
-.visibility-on {
   visibility: visible; }
 
 /*# sourceMappingURL=main.css.map */
