--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -2,6 +2,7 @@
 	// COLORS
 	--background-clr: #333;
 	--background_dark-clr: #222;
+	--gray-clr: #707070;
 	--primary-clr: #fff;
 	--secondary-clr: #41ff14;
 
