--- a/scss/base/_body.scss
+++ b/scss/base/_body.scss
@@ -11,23 +11,34 @@ body {
 	margin: 0;
 	padding: 0;
 
-	&::after {
-		background-color: var(--background-clr);
-		content: '';
-		height: 100%;
-		left: 0;
-		opacity: 0.95;
-		position: absolute;
-		top: 0;
-		width: 100%;
-		z-index: -1;
-	}
+	// &::after {
+	// 	background-color: var(--background-clr);
+	// 	content: '';
+	// 	// height: 100%;
+	// 	min-height: 100%;
+	// 	left: 0;
+	// 	opacity: 0.95;
+	// 	position: absolute;
+	// 	top: 0;
+	// 	width: 100%;
+	// 	z-index: -1;
+	// }
 }
 
 .container {
 	align-items: center;
+	background-color: rgba(51, 51, 51, 0.95);
 	display: flex;
 	height: 100vh;
+	justify-content: center;
+	padding: 2rem;
+}
+
+.container-aboutme-portfolio {
+	align-items: center;
+	background-color: var(--background-clr);
+	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	padding: 2rem;
 }
