--- a/scss/sections/aboutme/_header.scss
+++ b/scss/sections/aboutme/_header.scss
@@ -1,10 +1,10 @@
-.header {
-	// align-items: center;
-	// display: flex;
-	// flex-direction: column;
-	// height: 90vh;
-	// justify-content: center;
-	// width: 100%;
+.header-aboutme-portfolio {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+	justify-content: center;
+	width: 100%;
 
 	&__title {
 		color: var(--secondary-clr);
@@ -36,6 +36,7 @@
 
 .arrows {
 	margin: 0 auto;
+	height: 5rem;
 	width: 5rem;
 
 	&.hide {
@@ -88,6 +89,7 @@
 @supports (clip-path: polygon(0 0, 100% 0, 50% 100%)) {
 	.arrows {
 		margin: 0 auto;
+		height: 5rem;
 		width: 5rem;
 
 		&.hide {
