--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,8 @@
 @import 'sections/start-page/header';
 @import 'sections/aboutme/header';
 @import 'sections/aboutme/education';
+@import 'sections/aboutme/work';
+@import 'sections/aboutme/skills';
 
 @import 'menu';
 // @import 'section-header';
