--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 @import 'sections/aboutme/education';
 @import 'sections/aboutme/work';
 @import 'sections/aboutme/skills';
+@import 'sections/aboutme/courses';
 
 @import 'menu';
 // @import 'section-header';
