--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,8 @@
 @import 'sections/aboutme/work';
 @import 'sections/aboutme/skills';
 @import 'sections/aboutme/courses';
+@import 'sections/aboutme/languages';
+@import 'sections/aboutme/footer';
 
 @import 'menu';
 // @import 'section-header';
