--- a/scss/base/_global-selectors.scss
+++ b/scss/base/_global-selectors.scss
@@ -75,6 +75,12 @@
 	text-align: center;
 }
 
+.bar-wrapper {
+	&:not(:last-child) {
+		margin-bottom: 3rem;
+	}
+}
+
 .bar {
 	background-color: var(--primary-clr);
 	height: 0.1rem;
