Justify content in box-title

--- a/scss/_section-aboutme.scss
+++ b/scss/_section-aboutme.scss
@@ -83,6 +83,7 @@
 	align-items: center;
 	color: var(--background-clr);
 	display: flex;
+	justify-content: center;
 	text-transform: uppercase;
 	@include mq(768px) {
 		flex-direction: column;
@@ -123,7 +124,8 @@
 	opacity: 0;
 	transform: scale(1, 0);
 	transform-origin: top;
-	transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+	transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out,
+		transform 0.3s ease-in-out;
 }
 
 .box-skills-languages-wrapper {
@@ -194,7 +196,8 @@
 	margin-bottom: 2rem;
 	padding: 1.5rem 1rem 0;
 	transform: scale(1, 1);
-	transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out, transform 0.3s ease-in-out 0.3s;
+	transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out,
+		transform 0.3s ease-in-out 0.3s;
 	&:last-child {
 		margin-bottom: 1rem;
 	}
