--- a/css/main.css
+++ b/css/main.css
@@ -500,7 +500,7 @@ body {
 .hide-header {
   visibility: hidden; }
 
-.header-aboutme-portfolio {
+.header-aboutme {
   align-items: center;
   background-color: var(--background-clr);
   display: flex;
@@ -508,24 +508,24 @@ body {
   height: 100vh;
   justify-content: center;
   width: 100%; }
-  .header-aboutme-portfolio__title {
+  .header-aboutme__title {
     color: var(--secondary-clr);
     font-size: 4rem;
     font-weight: bold;
     margin: 0;
     text-transform: uppercase; }
-  .header-aboutme-portfolio__subtitle {
+  .header-aboutme__subtitle {
     font-size: 1.8rem;
     font-weight: normal;
     margin: 1rem 0 0 0; }
-  .header-aboutme-portfolio__my-photo {
+  .header-aboutme__my-photo {
     border: 0.5rem solid var(--secondary-clr);
     border-radius: 50%;
     display: block;
     height: 10rem;
     width: 10rem;
     margin: 2.5rem auto; }
-  .header-aboutme-portfolio__description {
+  .header-aboutme__description {
     font-size: 1.6rem;
     line-height: 2.5rem;
     margin: 0;
@@ -642,6 +642,70 @@ body {
   .footer__text {
     font-size: 1.6rem;
     font-style: italic; }
+
+.header-portfolio {
+  align-items: center;
+  background-color: var(--background-clr);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 7rem;
+  width: 100%; }
+  .header-portfolio__title {
+    color: var(--secondary-clr);
+    font-size: 4rem;
+    font-weight: bold;
+    margin: 0;
+    text-transform: uppercase; }
+  .header-portfolio__subtitle {
+    font-size: 1.8rem;
+    font-weight: normal;
+    line-height: 1.5;
+    margin: 1rem 0 0 0;
+    text-align: center; }
+
+.green-box {
+  align-items: center;
+  border: 0.5rem solid var(--secondary-clr);
+  border-radius: var(--box-radius);
+  display: flex;
+  flex-direction: column;
+  height: 30rem;
+  justify-content: center;
+  padding: 1.5rem;
+  transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+  width: 28rem; }
+  .green-box:first-child {
+    margin-top: 1rem; }
+  .green-box:not(:last-child) {
+    margin-bottom: 3rem; }
+  .green-box__link {
+    align-items: center;
+    color: var(--primary-clr);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-decoration: none; }
+  .green-box__example-img {
+    filter: grayscale(70%);
+    max-height: 10rem;
+    max-width: 24rem;
+    width: auto;
+    transition: filter 0.3s ease-in-out; }
+  .green-box__title {
+    color: var(--secondary-clr);
+    font-size: 2rem;
+    margin: 1rem 0; }
+  .green-box__text {
+    font-size: 1.6rem;
+    line-height: 2rem;
+    margin: 0;
+    text-align: center; }
+  .green-box:hover {
+    box-shadow: 0 0 2rem 0 #41ff14, inset 0 0 2rem 0 #41ff14;
+    transform: perspective(500px) rotateX(20deg); }
+  .green-box:hover .green-box__example-img {
+    filter: grayscale(0%); }
 
 .hamburger-menu {
   cursor: pointer;
